# os_assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README-dev.md  README.md  linux_assistant_flow.html  os_assistant.py  pyproject.toml  tox.ini
.github/workflows/: tests.yml
domain_logs/: filesystem_logs.json  network_logs.json  packages_logs.json  users_logs.json
examples/: os_assistant.py  rag_manager.py
examples/Experimental_Code_lang/: README.md  main.py
examples/Experimental_Code_lang/domain_logs/: filesystem_logs.json  network_logs.json  packages_logs.json  users_logs.json
examples/Experimental_Code_lang/src/config/: settings.py
examples/Experimental_Code_lang/src/graph/: builder.py  edges.py  nodes.py  state.py
examples/Experimental_Code_lang/src/models/: schemas.py
examples/Experimental_Code_lang/src/parsers/: setup.py
examples/Experimental_Code_lang/src/utils/: graph_visualizer.py
examples/domain_logs/: network_logs.json  packages_logs.json  users_logs.json
notebooks/: ollama-ngrok-colab-connection.ipynb
notebooks/flow_example_ollama/: flow_1.html  flow_2.html  grad_Example_flowAndCrew_Ollama.ipynb
scripts/: test.py
src/os_assistant/: rag_manager.py
src/os_assistant/cli/: __init__.py  cli.py
src/os_assistant/config/: settings.py
src/os_assistant/core/os_assistant/: main.py
src/os_assistant/graph/: __init__.py  builder.py  nodes.py  state.py
src/os_assistant/models/: schemas.py
src/os_assistant/parsers/: setup.py
src/os_assistant/tools/Agentic_RAG/: README.md  main.py  pyproject.toml  test.py  users_logs.json
src/os_assistant/tools/Agentic_RAG/data/: logs_db.sqlite
src/os_assistant/tools/Agentic_RAG/src/: agent_rag.py  chunking.py  config.py  database.py  embedding.py  retrieval.py
src/os_assistant/tools/Agentic_RAG/src/agentic_rag/application/: init.py  search.py
src/os_assistant/tools/Agentic_RAG/src/agentic_rag/config/: config.py
src/os_assistant/tools/Agentic_RAG/src/agentic_rag/core/: agent_rag.py  chunking.py  embedding.py  retrieval.py
src/os_assistant/tools/Agentic_RAG/src/agentic_rag/data/: net.sqlite
src/os_assistant/tools/Agentic_RAG/src/agentic_rag/database/: database.py
src/os_assistant/tools/Agentic_RAG/src/agentic_rag/processor/: batch_processor.py
src/os_assistant/tools/agentic_rag/: README.md  main.py
src/os_assistant/tools/agentic_rag/application/: init.py  search.py
src/os_assistant/tools/agentic_rag/config/: config.py
src/os_assistant/tools/agentic_rag/core/: agent_rag.py  chunking.py  embedding.py  retrieval.py
src/os_assistant/tools/agentic_rag/data/: fs.sqlite
src/os_assistant/tools/agentic_rag/database/: database.py
src/os_assistant/tools/agentic_rag/processor/: batch_processor.py
src/os_assistant/tools/code_agent/: agents.py  config.py  executors.py  main.py  models.py  parsers.py  prompts.py  run_code.py  wrapper.py
tests/: test_build.py
